add logo reference

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo/spacedata_logo.png" alt="Space Station OS Logo" class="logo">
         <h1>Space Station OS</h1>
         <nav>
             <ul>
@@ -19,6 +20,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="about">
             <h2>About Space Station OS</h2>
