--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav class="top-nav">
+        <img src="assets/logo/spacedata_logo.png" alt="Space Station OS Logo" class="logo">
         <h1>Space Station OS</h1>
     </nav>
     <div class="container">
@@ -29,6 +30,7 @@
         </main>
     </div>
     <footer>
+        <p>Contact us at <a href="mailto:info@space-station-os.org">info@spacestationos.org</a></p>
         <p>© 2024 Space Station OS. Built with GitHub Pages.</p>
     </footer>
 </body>
