--- a/demos.html
+++ b/demos.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav class="top-nav">
+        <img src="assets/logo/spacedata_logo.png" alt="Space Station OS Logo" class="logo">
         <h1>Space Station OS</h1>
     </nav>
     <div class="container">
