--- a/todos.html
+++ b/todos.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav class="top-nav">
+        <img src="assets/logo/spacedata_logo.png" alt="Space Station OS Logo" class="logo">
         <h1>Space Station OS</h1>
     </nav>
     <div class="container">
@@ -19,7 +20,6 @@
                 <li><a href="demos.html">Demos</a></li>
                 <li><a href="features.html">Features</a></li>
                 <li><a href="todos.html">TODOs</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </aside>
         <main class="content">
