--- a/requirements.html
+++ b/requirements.html
@@ -3,42 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Requirements - Space Station OS</title>
+    <title>Requirements - Space Station OS Documentation</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    <nav class="top-nav">
-        <img src="assets/logo/SSOS_LogoMark_TextSide_White_BGBlack.png" alt="Space Station OS Logo" class="logo">
-        <h1>Space Station OS</h1>
-    </nav>
+    <header class="top-nav">
+        <div class="nav-header">
+            <img src="assets/logo/SSOS_LogoMark_TextSide_White_BGBlack.png" alt="Space Station OS Logo" class="logo">
+            <h1>Space Station OS</h1>
+        </div>
+    </header>
+
     <div class="container">
         <aside class="sidebar">
+            <h2>Documentation</h2>
             <ul>
-                <li><a href="index.html">Introduction</a></li>
-                <li><a href="requirements.html">Requirements</a></li>
+                <!-- Old Subpages -->
+                <li>
+                    <a href="#" class="expandable open">Getting Started <span class="icon">-</span></a>
+                    <ul class="nested visible">
+                        <li><a href="requirements.html" class="active">Requirements</a></li>
+                        <li><a href="setup.html">Setup</a></li>
+                    </ul>
+                </li>
                 <li><a href="demos.html">Demos</a></li>
                 <li><a href="features.html">Features</a></li>
                 <li><a href="todos.html">TODOs</a></li>
+
+                <!-- New Subpages -->
+                <li><a href="packages.html">Packages</a></li>
+                <li><a href="concepts.html">Concepts</a></li>
+                <li><a href="troubleshooting.html">Troubleshooting</a></li>
+                <li><a href="blogs.html">Blogs</a></li>
+                <li><a href="release_notes.html">Release Notes</a></li>
+                <li><a href="faq.html">Frequently Asked Questions</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </aside>
         <main class="content">
-            <section id="requirements">
-                <h2>Requirements</h2>
-                <p>To set up Space Station OS:</p>
-                <ul>
-                    <li>Ubuntu 22.04</li>
-                    <li>ROS 2 Humble (desktop install)</li>
-                </ul>
-                <p>After cloning this repository, source the ROS2 setup in your terminal:</p>
-                <pre><code>source /opt/ros/humble/setup.bash</code></pre>
-                <p>Then, build the workspace from the top level of the repository:</p>
-                <pre><code>colcon build</code></pre>
-                <p>Afterward, each terminal must also source the install:</p>
-                <pre><code>source install/setup.bash</code></pre>
-            </section>
+            <h2>Requirements</h2>
+            <p>The following prerequisites are needed to set up and run Space Station OS:</p>
+            <ul>
+                <li>Operating System: <strong>Ubuntu 22.04</strong></li>
+                <li>ROS 2 Humble (desktop install): <a href="https://docs.ros.org/en/humble/Installation.html" target="_blank">Install ROS 2</a></li>
+                <li>Python 3.10 or higher</li>
+                <li>Git version control system</li>
+                <li>Colcon build tool</li>
+            </ul>
+            <p>Ensure that your system meets these requirements before proceeding with the setup.</p>
         </main>
     </div>
+
     <footer>
+        <p>Contact us at <a href="mailto:info@spacestationos.org">info@spacestationos.org</a></p>
         <p>© 2024 Space Station OS. Built with GitHub Pages.</p>
     </footer>
 </body>
