--- a/setup.html
+++ b/setup.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Station OS Documentation</title>
+    <title>Setup - Space Station OS Documentation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <!-- Top Navigation -->
     <header class="top-nav">
         <div class="nav-header">
             <img src="assets/logo/SSOS_LogoMark_TextSide_White_BGBlack.png" alt="Space Station OS Logo" class="logo">
@@ -16,7 +15,6 @@
         </div>
     </header>
 
-    <!-- Sidebar and Main Content -->
     <div class="container">
         <aside class="sidebar">
             <h2>Documentation</h2>
@@ -26,7 +24,7 @@
                     <a href="#" class="expandable open">Getting Started <span class="icon">-</span></a>
                     <ul class="nested visible">
                         <li><a href="requirements.html">Requirements</a></li>
-                        <li><a href="setup.html">Setup</a></li>
+                        <li><a href="setup.html" class="active">Setup</a></li>
                     </ul>
                 </li>
                 <li><a href="demos.html">Demos</a></li>
@@ -44,33 +42,33 @@
             </ul>
         </aside>
         <main class="content">
-            <h2>Welcome to Space Station OS</h2>
-            <p>Explore the comprehensive documentation for Space Station OS. Learn how to set up, operate, and extend the capabilities of the platform.</p>
-            <section id="introduction">
-                <h3>Introduction</h3>
-                <p>Space Station OS is an open-source platform advancing space station software, designed to facilitate operational research, simulation, and real-time control for space habitats. It leverages the ROS 2 framework and provides tools for tasks such as Fault Detection, Isolation, and Recovery (FDIR) with practical demos simulating space station scenarios.</p>
-            </section>
-            <section id="new-pages">
-                <h3>Explore Topics</h3>
-                <ul>
-                    <li><a href="requirements.html">Requirements</a></li>
-                    <li><a href="setup.html">Setup</a></li>
-                    <li><a href="demos.html">Demos</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="todos.html">TODOs</a></li>
-                    <li><a href="packages.html">Packages</a></li>
-                    <li><a href="concepts.html">Concepts</a></li>
-                    <li><a href="troubleshooting.html">Troubleshooting</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
-                    <li><a href="release_notes.html">Release Notes</a></li>
-                    <li><a href="faq.html">Frequently Asked Questions</a></li>
-                    <li><a href="about.html">About Space Station OS</a></li>
-                </ul>
-            </section>
+            <h2>Setup</h2>
+            <p>Follow these steps to set up Space Station OS:</p>
+            <ol>
+                <li>
+                    Source ROS 2 setup:
+                    <pre><code>source /opt/ros/humble/setup.bash</code></pre>
+                </li>
+                <li>
+                    Clone the repository:
+                    <pre><code>git clone https://github.com/space-station-os/space-station-os.git</code></pre>
+                </li>
+                <li>
+                    Navigate to the project directory:
+                    <pre><code>cd space-station-os</code></pre>
+                </li>
+                <li>
+                    Build the workspace:
+                    <pre><code>colcon build</code></pre>
+                </li>
+                <li>
+                    Source the workspace:
+                    <pre><code>source install/setup.bash</code></pre>
+                </li>
+            </ol>
         </main>
     </div>
 
-    <!-- Footer -->
     <footer>
         <p>Contact us at <a href="mailto:info@spacestationos.org">info@spacestationos.org</a></p>
         <p>© 2024 Space Station OS. Built with GitHub Pages.</p>
