differentiate between future and prospective demos

--- a/demos.html
+++ b/demos.html
@@ -54,6 +54,10 @@
                 <li>Observe the simulation and verify the response process.</li>
             </ol>
 
+            <h3>Future Demos</h3>
+
+            <p>Additional demonstration scenarios will be added here, showcasing advanced capabilities such as multi-agent coordination, complex FDIR workflows, and enhanced real-time simulations.</p>
+            
             <h3>Prospective Demos</h3>
 
             <h4>Demo P1 - Dynamic Thermal Management</h4>
