--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,6 @@
         <aside class="sidebar">
             <h2>Documentation</h2>
             <ul>
-                <!-- Old Subpages -->
                 <li>
                     <a href="#" class="expandable open">Getting Started <span class="icon">-</span></a>
                     <ul class="nested visible">
@@ -30,8 +29,6 @@
                 <li><a href="demos.html">Demos</a></li>
                 <li><a href="features.html">Features</a></li>
                 <li><a href="todos.html">TODOs</a></li>
-
-                <!-- New Subpages -->
                 <li><a href="packages.html">Packages</a></li>
                 <li><a href="concepts.html">Concepts</a></li>
                 <li><a href="troubleshooting.html">Troubleshooting</a></li>
@@ -43,12 +40,56 @@
         </aside>
         <main class="content">
             <h2>Frequently Asked Questions</h2>
-            <p>Answers to the most common questions about Space Station OS will be available here.</p>
+            <p>Find answers to common questions about Space Station OS below. If your question is not answered here, please reach out through our <a href="https://github.com/space-station-os/space_station_os">GitHub repository</a> or connect with us on <a href="https://www.linkedin.com/company/space-station-os/">LinkedIn</a>.</p>
+
+            <h3>Contribution and Getting Started</h3>
+            <p><strong>Q:</strong> How do I contribute to the Space Station OS project?</p>
+            <p><strong>A:</strong> Please contact us through GitHub to discuss how you can get involved. We also hold biweekly technical meetings every other Monday at 12 PM JST (Tuesday at 12 AM UTC). Feel free to join us there.</p>
+
+            <p><strong>Q:</strong> I cannot find where to start contributing.</p>
+            <p><strong>A:</strong> Start by visiting our <a href="https://github.com/space-station-os/space_station_os">GitHub repository</a> and reviewing the "Contributing" section. This provides a step-by-step guide for new contributors.</p>
+
+            <h3>Simulation</h3>
+            <p><strong>Q:</strong> What kind of dynamics simulator do you use?</p>
+            <p><strong>A:</strong> We are currently preparing to use NVIDIA Isaac Sim in an Ubuntu environment for robotic simulations, with the first demo expected in December 2024. Unreal Engine is also planned for future implementations, primarily in Ubuntu environments.</p>
+
+            <h3>ROS2, OSRA, OSRF</h3>
+            <p><strong>Q:</strong> Is this Space Station OS project officially supported by Open Robotics?</p>
+            <p><strong>A:</strong> We reached out to Open Robotics for confirmation in November 2024 and are awaiting an official response.</p>
+
+            <h3>Demos</h3>
+            <p><strong>Q:</strong> I found a bug in a demo. How do I report it?</p>
+            <p><strong>A:</strong> Please visit our <a href="https://docs.github.com/en/issues/tracking-your-work-with-issues/using-issues/creating-an-issue">GitHub Issues page</a> and create a new issue. Include as much detail as possible, such as steps to reproduce, expected behavior, and the environment in which the bug occurred.</p>
+
+            <h3>Installation</h3>
+            <p><strong>Q:</strong> Where can I find instructions to install Space Station OS?</p>
+            <p><strong>A:</strong> You can find installation instructions in the <a href="https://github.com/space-station-os/space_station_os">GitHub repository</a>. To run a particular demo, refer to the README in the root of the corresponding demo directory. Instructions for running an integrated ISS simulation are under development (TBD).</p>
+
+            <h3>Subsystems</h3>
+            <p><strong>Q:</strong> Where can I find modules for ECLSS (Environmental Control and Life Support Systems)?</p>
+            <p><strong>A:</strong> These modules are currently under construction. Join the discussion and contribute ideas on <a href="https://github.com/space-station-os/space-station-os.github.io/issues/7">GitHub</a>.</p>
+
+            <h3>Licensing and Usage</h3>
+            <p><strong>Q:</strong> What license does the Space Station OS project use?</p>
+            <p><strong>A:</strong> The project uses the Apache 2.0 license, which permits usage, modification, and distribution. Refer to the LICENSE file in the repository for details.</p>
+
+            <h3>Troubleshooting</h3>
+            <p><strong>Q:</strong> My simulation crashes during startup. What should I do?</p>
+            <p><strong>A:</strong> Check the troubleshooting section of the README file. Common issues include incompatible ROS2 versions or missing dependencies. For unresolved issues, raise a GitHub issue with logs and details.</p>
+
+            <h3>Supported Platforms</h3>
+            <p><strong>Q:</strong> Which operating systems are supported?</p>
+            <p><strong>A:</strong> Space Station OS is officially supported on Ubuntu 22.04 LTS. Support for other operating systems may be added in the future.</p>
+
+            <h3>Contributing Beyond Code</h3>
+            <p><strong>Q:</strong> Can I contribute to Space Station OS without coding skills?</p>
+            <p><strong>A:</strong> Yes, you can contribute by testing demos, providing documentation, or suggesting feature enhancements. Join the discussion on GitHub to learn more.</p>
         </main>
     </div>
 
     <footer>
         <p>Contact us at <a href="mailto:info@spacestationos.org">info@spacestationos.org</a></p>
+        <p>Connect with us on <a href="https://www.linkedin.com/company/space-station-os/">LinkedIn</a></p>
         <p>© 2024 Space Station OS. Built with GitHub Pages.</p>
     </footer>
 </body>
